smartrecipe/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: smartrecipe
  labels:
    app.kubernetes.io/part-of: smartrecipe
